--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 logging.level.guru.springframework=debug
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=10MB
