--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,5 +9,9 @@ spring.datasource.mysql.hibernate.hbm2ddl.auto=none
 spring.datasource.mysql.type=com.zaxxer.hikari.HikariDataSource
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
 logging.level.org.hibernate.SQL_SLOW=info
+# liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db-changelog/master.xml
