define liquibase bean explicitly; turn off for default/test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=10MB
+
+spring.liquibase.enabled=false
