--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- plugin is used for automatic changelog generation; running update, diff etc
+				Required params (aka datasource config + output file location):
+				1) changeLogFile;
+				2) url (db url);
+				3) username;
+				4) password;
+				5) driver
+			-->
 			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
