--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,10 +8,11 @@ spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.mysql.hibernate.hbm2ddl.auto=none
 spring.datasource.mysql.type=com.zaxxer.hikari.HikariDataSource
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
+# hibernate
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
-logging.level.org.hibernate.SQL_SLOW=info
+spring.jpa.properties.hibernate.generate_statistics=false
+logging.level.org.hibernate.stat=info
+
 # liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db-changelog/master.xml
